--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docs/themes/ananke"]
 	path = docs/themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
+[submodule "docs/themes/hugo-profile"]
+	path = docs/themes/hugo-profile
+	url = https://github.com/gurusabarish/hugo-profile
