reporte: practica 0 completada

--- a/docs/hugo.yaml
+++ b/docs/hugo.yaml
@@ -93,4 +93,7 @@ params:
     btnName: "Correo"
     btnLink: mailto:david.norberto@uabc.edu.mx
 
+  terms:
+    toc: "Tabla de Contenidos"
+
   footer:
